force-app/main/default/objects/Contact/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Shareholder</fullName>
            </value>
            <value>
                <fullName>UBO</fullName>
            </value>
            <value>
                <fullName>Signatory</fullName>
            </value>
            <value>
                <fullName>Authorised User</fullName>
            </value>
            <value>
                <fullName>Trader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>