force-app/main/default/objects/Contact/fields/Estimated_Trade_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Trade_Frequency__c</fullName>
    <label>Estimated Trade Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Estimated_Trade_Frequency</valueSetName>
    </valueSet>
</CustomField>