force-app/main/default/objects/Contact/fields/Is_PEP__c.field-meta.xml
<CustomField>
    <fullName>Is_PEP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this contact is a Politically Exposed Person.</description>
    <label>Is PEP</label>
    <type>Checkbox</type>
</CustomField>