force-app/main/default/objects/Contact/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <description>Nationality of the contact from onboarding.</description>
    <label>Nationality</label>
    <length>80</length>
    <type>Text</type>
</CustomField>