force-app/main/default/objects/Contact/fields/Need_to_List_More_Directors__c.field-meta.xml
<CustomField>
    <fullName>Need_to_List_More_Directors__c</fullName>
    <label>Need to List More Directors</label>
    <type>TextArea</type>
</CustomField>