force-app/main/default/objects/Contact/fields/Onboarding_Application__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Source onboarding application this Contact was converted from.</description>
    <label>Onboarding Application</label>
    <referenceTo>Onboarding_Application__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>