force-app/main/default/objects/Contact/fields/other_relevant_trading_experience__c.field-meta.xml
<CustomField>
    <fullName>other_relevant_trading_experience__c</fullName>
    <label>Other relevant trading experience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>