force-app/main/default/objects/Contact/fields/Ownership_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Percentage__c</fullName>
    <description>Percentage of ownership in the company (for shareholders/UBOs).</description>
    <label>Ownership Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>