force-app/main/default/objects/Contact/fields/Source_of_Wealth__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Wealth__c</fullName>
    <description>Source of wealth for the contact (from onboarding party data or private risk assessment).</description>
    <label>Source of Wealth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>