force-app/main/default/objects/Contact/fields/Source_of_Wealth_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Wealth_Explanation__c</fullName>
    <description>Detailed explanation of the contact&apos;s source of wealth (from onboarding party data or private risk assessment).</description>
    <label>Source of Wealth Explanation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>