force-app/main/default/objects/Contact/fields/Traded_in_the_past_12_months__c.field-meta.xml
<CustomField>
    <fullName>Traded_in_the_past_12_months__c</fullName>
    <label>Traded in the past 12 months</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Traded_in_the_past_12_months</valueSetName>
    </valueSet>
</CustomField>